--- a/aboutus.css
+++ b/aboutus.css
@@ -333,7 +333,7 @@
       position: relative;
       width: 100%;
       height: 350px;
-      background: url("img/shopbanner.jpeg") center/cover no-repeat; 
+      background: url("img/per8.jpeg") center/cover no-repeat; 
       display: flex;
       justify-content: center;
       align-items: center;
