--- a/index.css
+++ b/index.css
@@ -318,7 +318,7 @@ body {
 /* Hero banner */
 .hero-img {
   width: 100%;
-  height: 100%;
+  height: auto;
   object-fit: cover;
   object-position: center;
 }
@@ -411,9 +411,6 @@ body {
     font-size: 1.6rem;
   }
 
-  .hero-img {
-    height: 85vh; 
-  }
 }
 
 /* Tablets */
@@ -431,10 +428,10 @@ body {
     height: 50px;
   }
 
-  .hero-img {
+  /* .hero-img {
     height: 70vh;
     object-position: center;
-  }
+  } */
 
   .about-section {
     padding: 60px 0;
@@ -480,10 +477,11 @@ body {
     margin-top: 20px;
   }
 
-  .hero-img {
-    height: 55vh;
+  /* .hero-img {
+    width: 100%;
+    height: auto;
     object-position: top center;
-  }
+  } */
 
   .sidebar-footer {
   gap: 10px;
@@ -510,10 +508,10 @@ body {
     font-size: 1.8rem;
   }
 
-  .hero-img {
+  /* .hero-img {
     height: 45vh;
     object-position: center;
-  }
+  } */
 
   .carousel-control-prev-icon,
   .carousel-control-next-icon {
