--- a/shop.css
+++ b/shop.css
@@ -332,7 +332,7 @@
       position: relative;
       width: 100%;
       height: 350px;
-      background: url("img/shopbanner.jpeg") center/cover no-repeat; 
+      background: url("img/per5.jpeg") center/cover no-repeat; 
       display: flex;
       justify-content: center;
       align-items: center;
